[gd_scene load_steps=14 format=2]

[ext_resource path="res://Script/Building/s_building.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Building/EnginePaper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Fonts/TAPELOOP.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Art/Building/progress bar/ready_bar_empty.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Building/BuildInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/Building/PAGE/cover_open_1.png" type="Texture" id=7]
[ext_resource path="res://Art/Building/progress bar/ready_bar_full_1.png" type="Texture" id=8]
[ext_resource path="res://Art/Building/PAGE/page_open_1.png" type="Texture" id=9]
[ext_resource path="res://Art/Building/progress bar/ready_bar_full.png" type="Texture" id=10]
[ext_resource path="res://Art/Building/progress bar/ready_bar_loading.png" type="Texture" id=11]
[ext_resource path="res://Audio/Themes/Planning_1.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 4 )

[node name="Building" type="Node2D"]
script = ExtResource( 1 )

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 798, 470 )
texture = ExtResource( 7 )

[node name="Pages" type="Sprite" parent="."]
position = Vector2( 796.899, 460.52 )
texture = ExtResource( 9 )

[node name="BuildInterface" parent="." instance=ExtResource( 6 )]
position = Vector2( 579.564, 529.167 )

[node name="EnginePaper" parent="." instance=ExtResource( 3 )]
position = Vector2( 1044.26, 503.964 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 823.058
margin_top = 479.488
margin_right = 823.058
margin_bottom = 479.488
is_build = true

[node name="Ready" type="Control" parent="."]
margin_left = 907.333
margin_top = 747.22
margin_right = 907.333
margin_bottom = 747.22
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Ready"]

[node name="Progress" type="TextureProgress" parent="Ready"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 20.0
value = 15.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Ready"]
margin_right = 181.0
margin_bottom = 61.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ready"]
margin_left = 12.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "READY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 12 )
volume_db = -80.0
bus = "Background Music"

[node name="Tween" type="Tween" parent="."]
[connection signal="create_piece" from="BuildInterface" to="." method="_on_BuildInterface_create_piece"]
[connection signal="pressed" from="Ready/TextureButton" to="." method="_on_TextureButton_pressed"]
